[project]
name = "gsutil-hash-sqlite3"
version = "0.1.0"
requires-python = ">=3.13.2"
dependencies = [
    "crcmod>=1.7",
    "six>=1.16.0"
]

[dependency-groups]
dev = [
    "ruff>=0.9.1",
    "pre-commit>=4.0.1"
]

[tool.ruff.lint]
extend-select = ["I", "B"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403", "F405"]
